email link added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>T-34 Tank in Combat, 1942 (Coming 2024)</li>
       </ol>
      
-       <p> Email me at goldovt18+Russianmanuals@gmail.com to inquire about purchasing.</p>
+       <p> Email me at mailto:goldovt18+Russianmanuals@gmail.com to inquire about purchasing.</p>
       
    </body>
 </html>
