--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
      
        <p> Email me at <a href="mailto:goldovt18+Russianmanuals@gmail.com subject:Hi from github bookstore, and am interested in the following books:">
                                     Write to me goldovt18@gmail.com
-                                </a> to inquire about purchasing.</p>
+                                </a> to inquire about purchasing.
+     </p>
       
    </body>
 </html>
