mailto link works

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ol>
      
        <p> Email me at <a href="mailto:goldovt18+Russianmanuals@gmail.com subject:Hi from github bookstore, and am interested in the following books:">
-                                    Write to me goldovt18@gmail.com
+                                   goldovt18@gmail.com
                                 </a> to inquire about purchasing.
      </p>
       
