change page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
  <html lang="en">
     <head>
-       <title> Military Bookstore </title>
+       <title> Russian Manuals in English </title>
    </head>
    
     <body>
