--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 </a> to inquire about purchasing.
      </p>
      
-     <a href="mailto:email@example.com? &subject=Mail from our Website&body=Some body text here">Send Email</a>
+     <!--<a href="mailto:email@example.com? &subject=Mail from our Website&body=Some body text here">Send Email</a>-->
       
    </body>
 </html>
