--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>T-34 Tank in Combat, 1942 (Coming 2024)</li>
       </ol>
      
-       <p> Email me at <a href="mailto:goldovt18+Russianmanuals@gmail.com &subject:Hi from github bookstore,I and am interested in the following books:">
+       <p> Email me at <a href="mailto:goldovt18+Russianmanuals@gmail.com? &subject:Hi from github bookstore,I and am interested in the following books:">
                                    goldovt18@gmail.com
                                 </a> to inquire about purchasing.
      </p>
